--- a/vietnam.html
+++ b/vietnam.html
@@ -89,8 +89,8 @@ body {
   <!-- NAVIGATION -->
   <nav>
     <a href="index.html">Home</a>
-    <a href="japan.html" class="active">Japan</a>
-    <a href="vietnam.html">Vietnam</a>
+    <a href="japan.html">Japan</a>
+    <a href="vietnam.html" class="active">Vietnam</a>
     <a href="philippines.html">Philippines</a>
   </nav>
 
